--- a/Pikaball/Views/Game/Collection.cshtml
+++ b/Pikaball/Views/Game/Collection.cshtml
@@ -8,36 +8,24 @@
 <!Doctype html>
 <html>
 <head>
-
+    <link rel="stylesheet" href="~/css/collection.css" />
 </head>
 <body>
-    <div class="mt-lg-5">
+    <div class="mt-lg-5"></div>
+    <h1>@User.Identity.Name's Pokemon Collection</h1>
+    <div>
+        <form asp-action="Collection" method="get">
+            <div>
+                <label for="searchBar">Search</label>
+            </div>
+            <div>
+                <input id="searchBar" name="searchBar" type="text" />
+                <input type="submit" value="Search Pokemon" />
+            </div>
+        </form>
+    </div>
+    <div id="searchResults">
 
     </div>
-    @if (SignInManager.IsSignedIn(User))
-    {
-        <h1>@User.Identity.Name's Pokemon Collection</h1>
-        <div>
-            <form asp-action="Collection" method="get">
-                <div>
-                    <label for="searchBar">Search</label>
-                </div>
-                <div>
-                    <input id="searchBar" name="searchBar" type="text" />
-                    <input type="submit" value="Search Pokemon" />
-                </div>
-            </form>
-        </div>
-        <div id="searchResults">
-
-        </div>
-    }
-    else
-    {
-
-        <a asp-area="Identity" asp-page="/Account/Login">An Account is required for user to view this page, please login</a>
-    }
-
-
 </body>
 </html>
