--- a/Pikaball/Views/Game/Play.cshtml
+++ b/Pikaball/Views/Game/Play.cshtml
@@ -8,10 +8,19 @@
     <link rel="stylesheet" href="~/css/play.css" />
 </head>
 <body>
-    <div class="play">
-        <div class="background-sky">test</div>
-        <div class="background-grass"></div>
-        <div class="pokeBall"></div>
+    <p class="summon-text">Summon a Pokemon!</p>
+    <img class="arrow" src="~/resources/arrow.png"/>
+    <img class="pokeball" src="~/resources/pokeball.png"/>
+    <div class="history_panel">
+        <div class="history_container">
+            <div class="history_frames"></div>
+            <div class="history_frames"></div>
+            <div class="history_frames"></div>
+            <div class="history_frames"></div>
+            <div class="history_frames"></div>
+            <div class="history_frames"></div>
+            <div class="history_frames"></div>
+        </div>
     </div>
 </body>
 </html>
