--- a/Pikaball/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Pikaball/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 id="login-title">@ViewData["Title"]</h1>
 <div class="row">
     <div class="col-md-4">
         <section>
@@ -39,7 +39,7 @@
                         <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
                     </p>
                     <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                        <a id="register" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
                     </p>
                 </div>
             </form>
