--- a/Pikaball/wwwroot/css/play.css
+++ b/Pikaball/wwwroot/css/play.css
@@ -1,31 +1,29 @@
-﻿.play, #main, #rendered-page, .container {
-    height: 100%;
-    width: 100%;
-    max-width: none !important;
-    max-height: none !important;
-    padding: 0;
-    overflow: hidden;
+﻿.pokeball {
+    width: 444px;
+    /*transform: translate(-50%, -50%);*/
+    display: inline-block;
+    margin: auto;
+ 
 }
 
-
-body {
-    overflow: hidden;
+.summon-text {
+    margin-top: 5%;
+    text-align: center;
+    font-weight: bold;
+    font-size: 2em;
 }
 
-.background-sky {
-    background: #0099E5;
-    width: 100%;
-    height: 68%;
-    color: purple;
+.arrow {
+    width: 338px;
+    display: inline;
+    margin-top: 0px;
+    float: left;
 }
 
-.background-grass {
-    background: #2AAA30;
-    width: 100%;
-    height: 18%;
-    /*flex-grow: 1;*/
-}
-
-.pokeBall {
-    background: url(image.png);
+@media only screen and (max-width: 990px) {
+    .arrow {
+        transform: rotate(35deg);
+        width: 180px;
+    }
+    
 }
