login and register error, dependancy injection error

--- a/Pikaball/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Pikaball/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using Pikaball.Areas.Identity
 @using Pikaball.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Pikaball.Areas.Identity.Data
