--- a/Pikaball/Views/Game/Play.cshtml
+++ b/Pikaball/Views/Game/Play.cshtml
@@ -11,15 +11,11 @@
     <p class="summon-text">Summon a Pokemon!</p>
     <img class="arrow" src="~/resources/arrow.png"/>
     <img class="pokeball" src="~/resources/pokeball.png"/>
-    <div class="history_panel">
-        <div class="history_container">
-            <div class="history_frames"></div>
-            <div class="history_frames"></div>
-            <div class="history_frames"></div>
-            <div class="history_frames"></div>
-            <div class="history_frames"></div>
-            <div class="history_frames"></div>
-            <div class="history_frames"></div>
+    <div class="history-container">
+        <p>History</p>
+        <div class="history-panel">
+            <!--test image element for each history frame-->
+            
         </div>
     </div>
 </body>
