--- a/Pikaball/wwwroot/css/play.css
+++ b/Pikaball/wwwroot/css/play.css
@@ -20,6 +20,23 @@
     float: left;
 }
 
+.history-container {
+    position: fixed;
+    right: 4%;
+    top: 20%;
+    width: 5em;
+    height: 60%;
+    text-align: center;
+}
+/*<img class="history-frames " src="~/resources/pokeball.png" />*/
+.history-panel {
+    background-color: gray;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+
+
 @media only screen and (max-width: 990px) {
     .arrow {
         transform: rotate(35deg);
@@ -27,3 +44,5 @@
     }
     
 }
+
+
