--- a/Pikaball/Views/Game/Play.cshtml
+++ b/Pikaball/Views/Game/Play.cshtml
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="~/css/play.css" />
 </head>
 <body>
-    <p class="summon-text">Summon a Pokemon!</p>
-    <img class="arrow" src="~/resources/arrow.png"/>
-    <img class="pokeball" src="~/resources/pokeball.png"/>
+    <div class="summon-text animate-words">Summon a Pokemon!</div>
+    <img class="arrow" src="~/resources/arrow.png" />
+    <div class="play-buttons">
+        <img class="pokeball" src="~/resources/pokeball2.png" />
+    </div>
     <div class="history-container">
-        <p>History</p>
+        <div id="history-text">History</div>
         <div class="history-panel">
             <!--test image element for each history frame-->
-            
         </div>
     </div>
 </body>
