--- a/Pikaball/wwwroot/css/play.css
+++ b/Pikaball/wwwroot/css/play.css
@@ -1,39 +1,117 @@
 ﻿.pokeball {
-    width: 444px;
+    width: 344px;
+    z-index:0;
     /*transform: translate(-50%, -50%);*/
-    display: inline-block;
-    margin: auto;
- 
 }
 
+.pokeball:hover {
+    transform: scale(1.03);
+    z-index: 0;
+    cursor: pointer;
+}
+
+.pokeball:active {
+    transform: scale(0.95);
+}
+
+.play-buttons {
+    display:flex;
+    justify-content:center;
+}
 .summon-text {
-    margin-top: 5%;
+    margin-top: 7%;
+    margin-bottom: 6%;
     text-align: center;
     font-weight: bold;
     font-size: 2em;
 }
 
 .arrow {
-    width: 338px;
+    width: 238px;
     display: inline;
     margin-top: 0px;
     float: left;
+    margin-left: 0;
+    z-index:1;
+    position: fixed;
+}
+
+.container {
+    margin: auto;
 }
 
 .history-container {
     position: fixed;
     right: 4%;
-    top: 20%;
-    width: 5em;
+    top: 16%;
+    width: 5%;
     height: 60%;
     text-align: center;
 }
+
+#history-text{
+    font-family: 'Bangers', cursive;
+    font-size: 1.4em;
+    text-align: center;
+    margin-bottom: 5px;
+
+}
+
 /*<img class="history-frames " src="~/resources/pokeball.png" />*/
 .history-panel {
     background-color: gray;
     width: 100%;
     height: 100%;
     margin: 0;
+}
+
+
+@import url('https://fonts.googleapis.com/css?family=Bangers&display=swap');
+.animate-words {
+    text-transform: uppercase;
+    animation: rotate-word 5s linear infinite 1s;
+    font-family: 'Bangers', cursive;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@keyframes rotate-word {
+    0% {
+        opacity: 0;
+        transform: translateX(0);
+        filter: blur(10px);
+        transform: scale(1.2)
+    }
+
+    3% {
+        opacity: 1;
+        transform: translateX(0);
+        filter: blur(0px);
+        transform: scale(.9)
+    }
+
+    62% {
+        opacity: 1;
+        transform: translateX(0);
+        filter: blur(0px);
+        transform: scale(1)
+    }
+
+    76% {
+        opacity: 0;
+        transform: translateX(0);
+        filter: blur(10px);
+        transform: scale(1.2)
+    }
+
+    80% {
+        opacity: 0
+    }
+
+    100% {
+        opacity: 0
+    }
 }
 
 
