--- a/Pikaball/Views/Shared/_LoginPartial.cshtml
+++ b/Pikaball/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using Pikaball.Areas.Identity.Data
+@inject SignInManager<PikaballUser> SignInManager
+@inject UserManager<PikaballUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
