fixed the controller scaffolding problem for the model

--- a/Pikaball/Views/Shared/_Layout.cshtml
+++ b/Pikaball/Views/Shared/_Layout.cshtml
@@ -21,10 +21,10 @@
                     <!--navigation bar-->
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link btn-group-toggle mr-2 navi-button" asp-area="" asp-controller="Game" asp-action="Play">Play</a>
+                            <a class="nav-link btn-group-toggle mr-2 navi-button btn btn-primary" asp-area="" asp-controller="Game" asp-action="Play">Play</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-group-toggle navi-button" asp-area="" asp-controller="Game" asp-action="Collection">Collection</a>
+                            <a class="nav-link btn-group-toggle navi-button btn btn-primary" asp-area="" asp-controller="Game" asp-action="Collection">Collection</a>
                         </li>
                     </ul>
                 </div>
