--- a/Pikaball/Views/Game/Play.cshtml
+++ b/Pikaball/Views/Game/Play.cshtml
@@ -13,7 +13,11 @@
     <img class="arrow" src="~/resources/arrow.png" />
     <div class="play-buttons">
         <img class="pokeball" src="~/resources/pokeball3.png" />
-        <img class="summon-pokemon"/>
+        <div class="pokemon-result">
+            <img class="summon-pokemon" />
+            <div class="pokemon-label"></div>
+            <button class="btn btn-primary endsummon-btn">Next</button>
+        </div>
     </div>
     <div class="history-container">
         <div id="history-text">History</div>
