--- a/Pikaball/Views/PokemonCollections/Details.cshtml
+++ b/Pikaball/Views/PokemonCollections/Details.cshtml
@@ -42,16 +42,10 @@
             @Html.DisplayFor(model => model.LastDrawn)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HasNextEvolution)
+            @Html.DisplayNameFor(model => model.EvolutionCondition)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HasNextEvolution)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EvCondition)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EvCondition)
+            @Html.DisplayFor(model => model.EvolutionCondition)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.EvolutionUnlocked)
