--- a/Pikaball/Views/PokemonCollections/Edit.cshtml
+++ b/Pikaball/Views/PokemonCollections/Edit.cshtml
@@ -35,15 +35,10 @@
                 <input asp-for="LastDrawn" class="form-control" />
                 <span asp-validation-for="LastDrawn" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="HasNextEvolution" /> @Html.DisplayNameFor(model => model.HasNextEvolution)
-                </label>
-            </div>
             <div class="form-group">
-                <label asp-for="EvCondition" class="control-label"></label>
-                <input asp-for="EvCondition" class="form-control" />
-                <span asp-validation-for="EvCondition" class="text-danger"></span>
+                <label asp-for="EvolutionCondition" class="control-label"></label>
+                <input asp-for="EvolutionCondition" class="form-control" />
+                <span asp-validation-for="EvolutionCondition" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="EvolutionUnlocked" class="control-label"></label>
