--- a/Pikaball/Views/PokemonCollections/Index.cshtml
+++ b/Pikaball/Views/PokemonCollections/Index.cshtml
@@ -29,10 +29,7 @@
                 @Html.DisplayNameFor(model => model.LastDrawn)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.HasNextEvolution)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.EvCondition)
+                @Html.DisplayNameFor(model => model.EvolutionCondition)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.EvolutionUnlocked)
@@ -68,10 +65,7 @@
                 @Html.DisplayFor(modelItem => item.LastDrawn)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.HasNextEvolution)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EvCondition)
+                @Html.DisplayFor(modelItem => item.EvolutionCondition)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.EvolutionUnlocked)
