--- a/Pikaball/Views/Shared/_Layout.cshtml
+++ b/Pikaball/Views/Shared/_Layout.cshtml
@@ -24,7 +24,10 @@
                             <a class="nav-link btn-group-toggle mr-2 navi-button btn btn-primary" asp-area="" asp-controller="Game" asp-action="Play">Play</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-group-toggle navi-button btn btn-primary" asp-area="" asp-controller="Game" asp-action="Collection">Collection</a>
+                            <a class="nav-link btn-group-toggle mr-2 navi-button btn btn-primary" asp-area="" asp-controller="Game" asp-action="Collection">Collection</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link btn-group-toggle navi-button btn btn-primary" asp-area="" asp-controller="Game" asp-action="HowTo">How To Play</a>
                         </li>
                     </ul>
                 </div>
