--- a/Pikaball/wwwroot/css/play.css
+++ b/Pikaball/wwwroot/css/play.css
@@ -19,7 +19,7 @@
     justify-content:center;
 }
 .summon-text {
-    margin-top: 7%;
+    margin-top: 5%;
     margin-bottom: 6%;
     text-align: center;
     font-weight: bold;
@@ -65,7 +65,6 @@
     height: 100%;
     margin: 0;
 }
-
 
 @import url('https://fonts.googleapis.com/css?family=Bangers&display=swap');
 .animate-words {
@@ -122,6 +121,7 @@
     z-index: 1;
     margin: auto;
 }
+
 .summon-pokemon {
     width: 100%;
     bottom: 30%;
@@ -137,23 +137,20 @@
 }
 
 .pokemon-label {
+    z-index:2;
     text-align: center;
     font-weight: bold;
     font-size: 1.8em;
-    margin-bottom: 1%;
 }
 
-
 @keyframes summon {
-    25%, 35% {
-        box-shadow: 0 0 30vw 40vw rgba(255,255,255,1);
+    40%, 45% {
+        box-shadow: 0 0 30vw 25vw rgba(226,227,213,1);
     }
 
-    70% {
+    100% {
         box-shadow: 0 0 0vw 0vw rgba(241,244,0,0);
     }
-
-
 
     /*45%, 55% {
         box-shadow: 0 0 0 0px rgba(255,255,255,1);
